# multi-kakiokoshi

./: README.md  pyproject.toml
src/asr/: finetune_whisper.py  inference.py  main.py  simple_finetune.py
src/ctc/: segment.py
src/segment/: segment.py  tests.py
src/utils/: __init__.py  check_numerals.py  digraphs.json  lang2id.csv  upload_dataset.py  utils.py
