[project]
name = "multi-kakiokoshi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "silero-vad>=6.2.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uroman>=1.3.1.1",
]
