[project]
name = "multi-kakiokoshi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "audiomentations>=0.43.1",
    "datasets==3.6.0",
    "dotenv>=0.9.9",
    "huggingface-hub==0.34.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "silero-vad>=6.2.0",
    "soundfile>=0.13.1",
    "tokenizers==0.22.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "transformers==4.57.2",
    "uroman>=1.3.1.1",
    "wandb>=0.23.0",
]
